<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_content"
        android:textSize="20dp"
        android:text="@string/add_task"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/containerUnversity"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:src="@drawable/vector_university"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/university"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerOther"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:src="@drawable/otros"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textAlignment="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/containerPersonal"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:src="@drawable/vector_personal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/etTitleTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:hint="@string/title_task"
        android:maxLines="1"
        android:scrollHorizontally="true"/>

    <EditText
        android:id="@+id/etDescriptionTask"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/description_task"
        android:scrollbars="vertical"
        android:maxLines="2"
        android:background="@drawable/edit_text_text_area"/>
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_task"
        android:paddingVertical="5dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"/>
</LinearLayout>